running idea without the plugin (runIdea task)